fix button alignments

--- a/src/assets/scss/customizer/_edit.scss
+++ b/src/assets/scss/customizer/_edit.scss
@@ -5,25 +5,25 @@
 * override the button settings below, so "body" has been prepended below for specificity.
 */
 
-.top-button .bgtfw-multi-edit-button:hover div,
-.top-button .bgtfw-edit-button:hover div {
+.top-button > .bgtfw-multi-edit-button:hover div,
+.top-button > .bgtfw-edit-button:hover div {
     bottom: 30px;
     top: unset;
 }
 
-.left-button .bgtfw-multi-edit-button:hover div,
-.left-button .bgtfw-edit-button:hover div {
+.left-button > .bgtfw-multi-edit-button:hover div,
+.left-button > .bgtfw-edit-button:hover div {
     left: 0px;
     right: unset;
 }
 
-.multi-edit-button.left-button .bgtfw-multi-edit-button,
-.single-edit-button.left-button .bgtfw-edit-button {
+.multi-edit-button.left-button > .bgtfw-multi-edit-button,
+.single-edit-button.left-button > .bgtfw-edit-button {
 	left: 0;
 }
 
-.multi-edit-button.top-button .bgtfw-multi-edit-button,
-.single-edit-button.top-button .bgtfw-edit-button {
+.multi-edit-button.top-button > .bgtfw-multi-edit-button,
+.single-edit-button.top-button > .bgtfw-edit-button {
     top: 0;
 }
 
